# netlib

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  bench_common.hpp  schedule_bench.cpp  tcp_echo_bench.cpp  udp_ping_bench.cpp
cmake/: netlibConfig.cmake.in  netlib_coroutines.cmake  netlib_features.cmake  netlib_install.cmake  netlib_modules.cmake  netlib_options.cmake  netlib_probes.cmake  netlib_target.cmake
docs/: API_LAYERS.md  ARCHITECTURE.md  BENCHMARKS.md  CANCELLATION_AND_TIMEOUT.md  CMAKE_OPTIONS.md  COROUTINES.md  DEVELOPMENT.md  ERRORS.md  EXAMPLES.md  EXECUTION.md  FAQ.md  GETTING_STARTED.md  HEADERS_REFERENCE.md  INSTALL.md  LIFECYCLE.md  NET_REACTOR.md  NET_TCP.md  NET_UDP.md  NET_UNIX.md  PLATFORMS.md  README.md  ROADMAP.md  SIMPLE_MEDIUM.md  TESTING.md  V1_RELEASE.md
docs/diagrams/: README.md  coro_awaitable.puml  layers.puml  tcp_async_connect.puml  when_any_timeout.puml
examples/: CMakeLists.txt  README.md
examples/common/: io_runner.hpp
examples/tcp_echo/: CMakeLists.txt  client.cpp  client_coro.cpp  client_coro_timeout.cpp  medium_server.cpp  server.cpp  server_coro.cpp  simple_client.cpp
examples/udp_echo/: CMakeLists.txt  client_coro.cpp  server.cpp  server_coro.cpp
examples/unix_echo/: CMakeLists.txt  client_coro.cpp  client_coro_timeout.cpp  server_coro.cpp
include/netlib/: config.hpp  medium.hpp  netlib.hpp  simple.hpp
include/netlib/detail/: move_only_function.hpp
include/netlib/execution/: coroutine.hpp  delay.hpp  error.hpp  executor.hpp  generator.hpp  operation.hpp  schedule_awaitable.hpp  scheduler.hpp  spawn.hpp  task.hpp  then.hpp  thread_pool.hpp  timeout_error.hpp  when_all.hpp  when_any.hpp
include/netlib/execution/detail/: backend.hpp  task_promise.hpp  task_queue.hpp  when_all_state.hpp  when_all_tuple.hpp
include/netlib/execution/detail/std/: backend.hpp
include/netlib/net/: awaitables.hpp  cancellation_token.hpp  coro.hpp  coro_tcp.hpp  coro_unix.hpp  delay.hpp  endpoint.hpp  error.hpp  event_loop.hpp  tcp_acceptor.hpp  tcp_coro.hpp  tcp_socket.hpp  timeout.hpp  udp_awaitables.hpp  udp_coro.hpp  udp_socket.hpp  unix_awaitables.hpp  unix_coro.hpp  unix_endpoint.hpp  unix_stream_acceptor.hpp  unix_stream_socket.hpp
include/netlib/net/detail/: default_socket_backend.hpp  epoll_reactor.hpp  fallback_timer_scheduler.hpp  kqueue_reactor.hpp  kqueue_timer_scheduler.hpp  linux_timer_scheduler.hpp  make_reactor.hpp  poll_event.hpp  poll_reactor.hpp  posix_socket.hpp  posix_socket_backend.hpp  reactor.hpp  reactor_backend.hpp  socket_backend.hpp  socket_handle.hpp  timer_scheduler.hpp  win_socket_backend.hpp
include/netlib/net/medium/: apply_socket_options.hpp  io_context.hpp  socket_options.hpp  tcp_acceptor.hpp  tcp_socket.hpp
include/netlib/net/simple/: coro.hpp  io_runtime.hpp  tcp_connection.hpp  writable_chunk.hpp  write_stream.hpp
include/netlib/net/simple/detail/: sync_wait.hpp
modules/: CMakeLists.txt  netlib.net.cppm  netlib.net.medium.cppm  netlib.net.simple.cppm
tests/: CMakeLists.txt  execution_tests.cpp  netlib_tests.cpp
tests/cmake/consumer_smoke/: CMakeLists.txt  main.cpp
tests/fakes/: fake_reactor.hpp  fake_socket_backend.hpp  test_context.hpp
tests/integration/: net_tests.cpp  server_coro_shutdown_tests.cpp  simple_tcp_tests.cpp  tcp_echo_coro_tests.cpp  tcp_echo_tests.cpp  timerfd_tests.cpp  udp_echo_coro_tests.cpp  udp_loopback_tests.cpp  udp_server_coro_shutdown_tests.cpp  unix_echo_coro_tests.cpp  unix_server_coro_shutdown_tests.cpp  unix_stream_loopback_tests.cpp
tests/unit/execution/: delay_tests.cpp  generator_tests.cpp  spawn_tests.cpp  task_tests.cpp  then_tests.cpp  when_all_tests.cpp  when_all_tuple_tests.cpp  when_all_vector_tests.cpp  when_all_void_tests.cpp  when_any_abort_tests.cpp  when_any_tests.cpp
tests/unit/net/: accept_awaitable_tests.cpp  accept_cancel_tests.cpp  accept_timeout_tests.cpp  cancel_io_tests.cpp  cancellation_coro_tests.cpp  connect_awaitable_tests.cpp  connect_timeout_tests.cpp  connect_unix_timeout_tests.cpp  coro_tcp_tests.cpp  delay_loop_tests.cpp  medium_socket_options_tests.cpp  read_exact_tests.cpp  read_timeout_tests.cpp  read_unix_timeout_tests.cpp  simple_coro_tests.cpp  simple_tcp_connection_tests.cpp  tcp_acceptor_tests.cpp  tcp_coro_tests.cpp  tcp_socket_connect_tests.cpp  tcp_socket_lifetime_tests.cpp  tcp_socket_read_tests.cpp  tcp_socket_write_tests.cpp  timeout_cancel_tests.cpp  udp_coro_tests.cpp  udp_socket_tests.cpp  unix_awaitable_tests.cpp  unix_stream_tests.cpp
